--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nazmul's Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section>
-        <div>
-            <h1>Welcome!!! Myself</h1>
-            <h1>Nazmul Hridoy</h1>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome!!! Myself <br><span class="Orange-view">Nazmul Hridoy</span></h1>
             <p> I'm a Web developer & Creative Graphic Designer.Stay tune with me and also can be hire me . I'm ready to work with you .</p>
             <p> Thank you</p>
         </div>
-        <div>
-            
+        <div class="half-width">
+            <img src="image/1stimage.jpg" alt="">
+
         </div>
 
     </section>
