--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body>
     <section class="top-banner">
         <div class="half-width">
-            <h1>Welcome!!! Myself <br><span class="Orange-view">Nazmul Hridoy</span></h1>
+            <h1>Welcome !!! Myself <br><span class="Orange-view">Nazmul Hridoy</span></h1>
             <p> I'm a Web developer & Creative Graphic Designer.Stay tune with me and also can be hire me . I'm ready to work with you .</p>
             <p> Thank you</p>
+            <a target="_blank" href="https://www.linkedin.com/in/nzmlhrd/">Hire Me</a>
         </div>
         <div class="half-width">
             <img src="image/1stimage.jpg" alt="">
